--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,6 @@ input {
 /** hero */
 
 .hero {
-  /* background: var(--navyblue, #2e2f42); */
   margin: 0 auto;
   padding: 188px 0;
   background-image: linear-gradient(
@@ -194,13 +193,14 @@ input {
 }
 
 .hero-title {
+  max-width: 320px;
   color: var(--white, #fff);
   text-align: center;
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  max-width: 496px;
   margin: 0 auto 48px auto;
+  font-size: 32px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 
 .hero-btn {
@@ -612,6 +612,7 @@ input {
 .filter {
   padding-top: 96px;
   padding-bottom: 120px;
+  overflow: hidden;
 }
 
 .filter-list {
@@ -984,16 +985,15 @@ input {
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 2px 1px 0px rgba(46, 47, 66, 0.08);
-
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
-
   z-index: 999;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 80px 35px 40px 40px;
-}
+  overflow: auto;
+ }
 
 .mobile-menu-container.is-open {
   transform: translateX(0);
@@ -1054,13 +1054,17 @@ input {
   color: var(--pressed_state-ocean);
 }
 
+.current-color {
+  color: var(--accent-iris);
+}
+
 .mobile-address-item:not(:last-child) {
   margin-bottom: 40px;
 }
 
 .mobile-address-ref[href="tel:+110001111111"] {
-  color: var(--main-slate);
-  font-size: 36px;
+  color: var(--accent-iris);
+  font-size: 25px;
   font-weight: 700;
   line-height: 1.1;
   letter-spacing: 0.02em;
